--- a/tests_coverages/Repository/dashboard.html
+++ b/tests_coverages/Repository/dashboard.html
@@ -2,7 +2,7 @@
 <html lang="en">
  <head>
   <meta charset="UTF-8">
-  <title>Dashboard for C:\wamp64\www\projet-fin-aout\src\Controller</title>
+  <title>Dashboard for C:\wamp64\www\projet-fin-aout\src\Repository</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../_css/bootstrap.min.css?v=9.2.27" rel="stylesheet" type="text/css">
   <link href="../_css/nv.d3.min.css?v=9.2.27" rel="stylesheet" type="text/css">
@@ -17,7 +17,7 @@
       <nav aria-label="breadcrumb">
        <ol class="breadcrumb">
          <li class="breadcrumb-item"><a href="../index.html">C:\wamp64\www\projet-fin-aout\src</a></li>
-         <li class="breadcrumb-item"><a href="index.html">Controller</a></li>
+         <li class="breadcrumb-item"><a href="index.html">Repository</a></li>
          <li class="breadcrumb-item active">(Dashboard)</li>
 
        </ol>
@@ -58,7 +58,9 @@
         </tr>
        </thead>
        <tbody>
-       <tr><td><a href="IndexController.php.html#9">App\Controller\IndexController</a></td><td class="text-right">0%</td></tr>
+       <tr><td><a href="OrderRepository.php.html#17">App\Repository\OrderRepository</a></td><td class="text-right">0%</td></tr>
+       <tr><td><a href="ProductRepository.php.html#17">App\Repository\ProductRepository</a></td><td class="text-right">0%</td></tr>
+       <tr><td><a href="UserRepository.php.html#21">App\Repository\UserRepository</a></td><td class="text-right">0%</td></tr>
 
        </tbody>
       </table>
@@ -75,6 +77,7 @@
         </tr>
        </thead>
        <tbody>
+       <tr><td><a href="UserRepository.php.html#21">App\Repository\UserRepository</a></td><td class="text-right">12</td></tr>
 
        </tbody>
       </table>
@@ -112,7 +115,10 @@
         </tr>
        </thead>
        <tbody>
-       <tr><td><a href="IndexController.php.html#11"><abbr title="App\Controller\IndexController::index">index</abbr></a></td><td class="text-right">0%</td></tr>
+       <tr><td><a href="OrderRepository.php.html#19"><abbr title="App\Repository\OrderRepository::__construct">__construct</abbr></a></td><td class="text-right">0%</td></tr>
+       <tr><td><a href="ProductRepository.php.html#19"><abbr title="App\Repository\ProductRepository::__construct">__construct</abbr></a></td><td class="text-right">0%</td></tr>
+       <tr><td><a href="UserRepository.php.html#23"><abbr title="App\Repository\UserRepository::__construct">__construct</abbr></a></td><td class="text-right">0%</td></tr>
+       <tr><td><a href="UserRepository.php.html#31"><abbr title="App\Repository\UserRepository::upgradePassword">upgradePassword</abbr></a></td><td class="text-right">0%</td></tr>
 
        </tbody>
       </table>
@@ -129,6 +135,7 @@
         </tr>
        </thead>
        <tbody>
+       <tr><td><a href="UserRepository.php.html#31"><abbr title="App\Repository\UserRepository::upgradePassword">upgradePassword</abbr></a></td><td class="text-right">6</td></tr>
 
        </tbody>
       </table>
@@ -157,7 +164,7 @@ $(document).ready(function() {
       .yAxis.tickFormat(d3.format('d'));
 
     d3.select('#classCoverageDistribution svg')
-      .datum(getCoverageDistributionData([1,0,0,0,0,0,0,0,0,0,0,0], "Class Coverage"))
+      .datum(getCoverageDistributionData([3,0,0,0,0,0,0,0,0,0,0,0], "Class Coverage"))
       .transition().duration(500).call(chart);
 
     nv.utils.windowResize(chart.update);
@@ -175,7 +182,7 @@ $(document).ready(function() {
       .yAxis.tickFormat(d3.format('d'));
 
     d3.select('#methodCoverageDistribution svg')
-      .datum(getCoverageDistributionData([1,0,0,0,0,0,0,0,0,0,0,0], "Method Coverage"))
+      .datum(getCoverageDistributionData([4,0,0,0,0,0,0,0,0,0,0,0], "Method Coverage"))
       .transition().duration(500).call(chart);
 
     nv.utils.windowResize(chart.update);
@@ -225,7 +232,7 @@ $(document).ready(function() {
     chart.yAxis.axisLabel('Cyclomatic Complexity');
 
     d3.select('#classComplexity svg')
-      .datum(getComplexityData([[0,1,"<a href=\"IndexController.php.html#9\">App\\Controller\\IndexController<\/a>"]], 'Class Complexity'))
+      .datum(getComplexityData([[0,1,"<a href=\"OrderRepository.php.html#17\">App\\Repository\\OrderRepository<\/a>"],[0,1,"<a href=\"ProductRepository.php.html#17\">App\\Repository\\ProductRepository<\/a>"],[0,3,"<a href=\"UserRepository.php.html#21\">App\\Repository\\UserRepository<\/a>"]], 'Class Complexity'))
       .transition()
       .duration(500)
       .call(chart);
@@ -249,7 +256,7 @@ $(document).ready(function() {
     chart.yAxis.axisLabel('Method Complexity');
 
     d3.select('#methodComplexity svg')
-      .datum(getComplexityData([[0,1,"<a href=\"IndexController.php.html#11\">App\\Controller\\IndexController::index<\/a>"]], 'Method Complexity'))
+      .datum(getComplexityData([[0,1,"<a href=\"OrderRepository.php.html#19\">App\\Repository\\OrderRepository::__construct<\/a>"],[0,1,"<a href=\"ProductRepository.php.html#19\">App\\Repository\\ProductRepository::__construct<\/a>"],[0,1,"<a href=\"UserRepository.php.html#23\">App\\Repository\\UserRepository::__construct<\/a>"],[0,2,"<a href=\"UserRepository.php.html#31\">App\\Repository\\UserRepository::upgradePassword<\/a>"]], 'Method Complexity'))
       .transition()
       .duration(500)
       .call(chart);
