--- a/tests_coverages/Service/dashboard.html
+++ b/tests_coverages/Service/dashboard.html
@@ -2,7 +2,7 @@
 <html lang="en">
  <head>
   <meta charset="UTF-8">
-  <title>Dashboard for C:\wamp64\www\projet-fin-aout\src\Entity</title>
+  <title>Dashboard for C:\wamp64\www\projet-fin-aout\src\Service</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../_css/bootstrap.min.css?v=9.2.27" rel="stylesheet" type="text/css">
   <link href="../_css/nv.d3.min.css?v=9.2.27" rel="stylesheet" type="text/css">
@@ -17,7 +17,7 @@
       <nav aria-label="breadcrumb">
        <ol class="breadcrumb">
          <li class="breadcrumb-item"><a href="../index.html">C:\wamp64\www\projet-fin-aout\src</a></li>
-         <li class="breadcrumb-item"><a href="index.html">Entity</a></li>
+         <li class="breadcrumb-item"><a href="index.html">Service</a></li>
          <li class="breadcrumb-item active">(Dashboard)</li>
 
        </ol>
@@ -58,7 +58,6 @@
         </tr>
        </thead>
        <tbody>
-       <tr><td><a href="Product.php.html#8">App\Entity\Product</a></td><td class="text-right">85%</td></tr>
 
        </tbody>
       </table>
@@ -112,10 +111,6 @@
         </tr>
        </thead>
        <tbody>
-       <tr><td><a href="Order.php.html#27"><abbr title="App\Entity\Order::getId">getId</abbr></a></td><td class="text-right">0%</td></tr>
-       <tr><td><a href="Product.php.html#22"><abbr title="App\Entity\Product::getId">getId</abbr></a></td><td class="text-right">0%</td></tr>
-       <tr><td><a href="User.php.html#36"><abbr title="App\Entity\User::getId">getId</abbr></a></td><td class="text-right">0%</td></tr>
-       <tr><td><a href="User.php.html#100"><abbr title="App\Entity\User::eraseCredentials">eraseCredentials</abbr></a></td><td class="text-right">0%</td></tr>
 
        </tbody>
       </table>
@@ -160,7 +155,7 @@ $(document).ready(function() {
       .yAxis.tickFormat(d3.format('d'));
 
     d3.select('#classCoverageDistribution svg')
-      .datum(getCoverageDistributionData([0,0,0,0,0,0,0,0,0,1,2,0], "Class Coverage"))
+      .datum(getCoverageDistributionData([0,0,0,0,0,0,0,0,0,0,0,1], "Class Coverage"))
       .transition().duration(500).call(chart);
 
     nv.utils.windowResize(chart.update);
@@ -178,7 +173,7 @@ $(document).ready(function() {
       .yAxis.tickFormat(d3.format('d'));
 
     d3.select('#methodCoverageDistribution svg')
-      .datum(getCoverageDistributionData([4,0,0,0,0,0,0,0,0,0,0,21], "Method Coverage"))
+      .datum(getCoverageDistributionData([0,0,0,0,0,0,0,0,0,0,0,2], "Method Coverage"))
       .transition().duration(500).call(chart);
 
     nv.utils.windowResize(chart.update);
@@ -228,7 +223,7 @@ $(document).ready(function() {
     chart.yAxis.axisLabel('Cyclomatic Complexity');
 
     d3.select('#classComplexity svg')
-      .datum(getComplexityData([[90,7,"<a href=\"Order.php.html#8\">App\\Entity\\Order<\/a>"],[85.71428571428571,5,"<a href=\"Product.php.html#8\">App\\Entity\\Product<\/a>"],[90,13,"<a href=\"User.php.html#10\">App\\Entity\\User<\/a>"]], 'Class Complexity'))
+      .datum(getComplexityData([[100,3,"<a href=\"Calculator.php.html#5\">App\\Service\\Calculator<\/a>"]], 'Class Complexity'))
       .transition()
       .duration(500)
       .call(chart);
@@ -252,7 +247,7 @@ $(document).ready(function() {
     chart.yAxis.axisLabel('Method Complexity');
 
     d3.select('#methodComplexity svg')
-      .datum(getComplexityData([[0,1,"<a href=\"Order.php.html#27\">App\\Entity\\Order::getId<\/a>"],[100,1,"<a href=\"Order.php.html#32\">App\\Entity\\Order::getNumber<\/a>"],[100,1,"<a href=\"Order.php.html#37\">App\\Entity\\Order::setNumber<\/a>"],[100,1,"<a href=\"Order.php.html#44\">App\\Entity\\Order::getTotalPrice<\/a>"],[100,1,"<a href=\"Order.php.html#49\">App\\Entity\\Order::setTotalPrice<\/a>"],[100,1,"<a href=\"Order.php.html#56\">App\\Entity\\Order::getUser<\/a>"],[100,1,"<a href=\"Order.php.html#61\">App\\Entity\\Order::setUser<\/a>"],[0,1,"<a href=\"Product.php.html#22\">App\\Entity\\Product::getId<\/a>"],[100,1,"<a href=\"Product.php.html#27\">App\\Entity\\Product::getName<\/a>"],[100,1,"<a href=\"Product.php.html#32\">App\\Entity\\Product::setName<\/a>"],[100,1,"<a href=\"Product.php.html#39\">App\\Entity\\Product::getPrice<\/a>"],[100,1,"<a href=\"Product.php.html#44\">App\\Entity\\Product::setPrice<\/a>"],[0,1,"<a href=\"User.php.html#36\">App\\Entity\\User::getId<\/a>"],[100,1,"<a href=\"User.php.html#41\">App\\Entity\\User::getEmail<\/a>"],[100,1,"<a href=\"User.php.html#46\">App\\Entity\\User::setEmail<\/a>"],[100,1,"<a href=\"User.php.html#58\">App\\Entity\\User::getUserIdentifier<\/a>"],[100,1,"<a href=\"User.php.html#66\">App\\Entity\\User::getRoles<\/a>"],[100,1,"<a href=\"User.php.html#75\">App\\Entity\\User::setRoles<\/a>"],[100,1,"<a href=\"User.php.html#85\">App\\Entity\\User::getPassword<\/a>"],[100,1,"<a href=\"User.php.html#90\">App\\Entity\\User::setPassword<\/a>"],[0,1,"<a href=\"User.php.html#100\">App\\Entity\\User::eraseCredentials<\/a>"],[100,1,"<a href=\"User.php.html#106\">App\\Entity\\User::getFirstname<\/a>"],[100,1,"<a href=\"User.php.html#111\">App\\Entity\\User::setFirstname<\/a>"],[100,1,"<a href=\"User.php.html#118\">App\\Entity\\User::getLastname<\/a>"],[100,1,"<a href=\"User.php.html#123\">App\\Entity\\User::setLastname<\/a>"]], 'Method Complexity'))
+      .datum(getComplexityData([[100,2,"<a href=\"Calculator.php.html#7\">App\\Service\\Calculator::getTotalHt<\/a>"],[100,1,"<a href=\"Calculator.php.html#19\">App\\Service\\Calculator::getTotalTTC<\/a>"]], 'Method Complexity'))
       .transition()
       .duration(500)
       .call(chart);
